--- a/pokemon_tcg/index/templates/index/lookout.html
+++ b/pokemon_tcg/index/templates/index/lookout.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         {% include 'bootstrap.html' %}
 
-        <title>Chokémon</title>
+        <title>Cards2Lookout4</title>
     </head>
     <body>
         {% include 'nav.html' %}
