--- a/pokemon_tcg/single_page_app/templates/nav.html
+++ b/pokemon_tcg/single_page_app/templates/nav.html
@@ -19,9 +19,26 @@
         <ul class="navbar-nav">
             <div class="d-flex">
                 {%if request.user.is_authenticated %}
-                <ul class="nav-item">
-                    <a class="nav-link" href="{% url 'index:logout' %}">Logout</a>
-                </ul>
+                <!--TODO replace Hello firstname with an img of their avatar-->
+                <li class="nav-item dropdown">
+                    <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                    >
+                        <h6>Hello {{request.user.first_name}}</h6>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href=" {% url 'index:logout' %}">Profile</a>
+                        <a class="dropdown-item" href=" {% url 'index:logout' %}">Settings</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'index:logout' %}">Logout</a>
+                    </div>
+                </li>
                 {% else %}
                 <ul class="nav-item">
                     <a class="nav-link" href="{% url 'index:login' %}">Login</a>
